<resources>

    <string name="app_name">BoviTrack</string>

    <!-- Empty -->
    <string name="empty_title">Nenhum registro encontrado</string>
    <string name="empty_image_desc">Sem registros</string>
    <string name="empty_description">
        Ainda não há registros de mortalidade cadastrados ou disponíveis no momento.
    </string>

    <!-- Erro internet -->
    <string name="error_no_connection_title">Sem conexão</string>
    <string name="error_no_connection_desc">
        Verifique sua internet e tente novamente.
    </string>

    <!-- Erro server -->
    <string name="error_server_title">Erro no servidor</string>
    <string name="error_server_desc">
        Não foi possível carregar os dados no momento.
    </string>

    <!-- Erro genérico -->
    <string name="error_generic_title">Erro inesperado</string>
    <string name="error_generic_desc">
        Ocorreu um problema. Tente novamente mais tarde.
    </string>
    <string name="trocar_câmera">Trocar câmera</string>
    <string name="voltar">Voltar</string>
    <string name="tirar_foto">Tirar foto</string>
    <string name="flash">Alternar Flash</string>
    <string name="confirmar_saida_titulo">Sair da Câmera?</string>
    <string name="confirmar_saida_msg">Deseja realmente sair? A foto não será salva.</string>
    <string name="confirmar_saida_registro_titulo">Sair do Registro?</string>
    <string name="confirmar_saida_registro_msg">Deseja realmente sair? As informações preenchidas não serão salvas.</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>

    <!-- Permissão de Localização -->
    <string name="permissao_localizacao_titulo">Permissão de Localização</string>
    <string name="permissao_localizacao_msg">Ative sua localização tocando em permitir acesso ao uso da localização e habilite em seu dispositivo.</string>
    <string name="permitir">Permitir</string>
    <string name="agora_nao">Agora não</string>

    <!-- Orientação Câmera -->
    <string name="dialog_orientacao_titulo">Gire o celular na horizontal</string>
    <string name="dialog_orientacao_msg">Para uma melhor captura da foto, por favor gire o celular para a posição horizontal (deitado).</string>
    <string name="desc_girar_celular">Girar celular na horizontal</string>
    <string name="entender_abrir_camera">Entendi, abrir câmera</string>

    <!-- Filtro e Ordenação -->
    <string name="filtro_titulo">Ordenar registros por</string>
    <string name="filtro_mais_recentes">Mais recentes</string>
    <string name="filtro_mais_antigos">Mais antigos</string>
    <string name="filtrar_registros">Filtrar registros</string>

    <!-- Status Sincronização -->
    <string name="status_sincronizado">Sincronizado</string>
    <string name="status_pendente">Pendente de sincronização</string>
    <string name="desc_status_sincronizacao">Status de sincronização</string>

</resources>